--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,14 @@
 GENERAL STYLE
 */
 
-html {
-    text-align:center;
+@font-face {
+    font-family: "Comic Neue";
+    src: url(/ComicNeue-Light.ttf) format("truetype");
 }
 
-h1{
-    font-family:monospace;
+html {
+    text-align:center;
+    font-family:"Comic Neue";
 }
 
 body {
