--- a/css/styles.css
+++ b/css/styles.css
@@ -101,19 +101,24 @@ Hover color changing effect
     color: #6441a5;
 }
 
-.powershell {
+.vscode {
     color:#000000;
 }
+.vscode:hover {
+    color:#23a8f2;
+}
 
-.powershell:hover {
-    color:#4F88E7;
+.coffee {
+    color: #000000;
+}
+.coffee:hover {
+    color: #503619;
 }
 
 /* Keyframes for the fade-in */
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
 
 .fade-in {
     opacity:0;
