--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@ body {
 }
 
 a {
+    text-decoration-style: dotted;
+    text-decoration-thickness: 2px;
+}
+
+a:hover {
     text-decoration: none;
 }
 
